tests/positive/module_math.ax
module module_math;

import lib.math;

export c fn main(argc: i32, argv: *mut *mut u8) -> i32 {
    return add_one(41) - 42;
}
