tests/negative/break_outside_loop.ax
module break_outside_loop;

export c fn main(argc: i32, argv: *mut *mut u8) -> i32 {
    break;
    return 0;
}
